crates/claptrap-core/tests/snapshots/tests__command__no_binary_name.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_cmd=('myprog' 'command' 'set')
