crates/claptrap-core/tests/snapshots/tests__command__override_help.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_3624ca48'
myapp v1.0
           Does awesome things
           (C) me@mail.com

           Usage: myapp <opts> <command>

           Options:
           -h, --help       Display this message
           -V, --version    Display version info
           -s <stuff>       Do something with stuff
           -v               Be verbose

           Commands:
           help             Print this message
           work             Do some work
EOF_3624ca48
exit 0
