crates/claptrap-core/tests/snapshots/tests__command__override_usage.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_e8422258'
[1m[4mUsage:[0m myapp -X [-a] [-b] <file>
                   myapp -Y [-c] <file1> <file2>
                   myapp -Z [-d|-e]

[1m[4mOptions:[0m
  [1m-h[0m, [1m--help[0m  Print help
EOF_e8422258
exit 0
