crates/claptrap-core/tests/snapshots/tests__command__propagate_version.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_61e9d487'
myprog-test v1.1
EOF_61e9d487
exit 0
