crates/claptrap-core/tests/snapshots/tests__command__short_flag_alias.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap__subcommand='test'
claptrap_test_search='true'
