crates/claptrap-core/tests/snapshots/tests__command__short_flag_aliases.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap__subcommand='test'
