crates/claptrap-core/tests/snapshots/tests__command__styles.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_e3588c1d'
[32mUsage:[0m [35mmyprog[0m [37m[OPTIONS][0m

[1m[3m[34m[48;2;240;240;240m[58;5;07mOptions:[0m
  [35m-f[0m, [35m--foo[0m[37m [0m[37m<FOO>[0m  It does foo stuff [1m[33m[48;2;00;00;00m[env: [0m[1m[36m[48;2;00;00;00mMY_FOO=[0m[1m[33m[48;2;00;00;00m][0m [1m[33m[48;2;00;00;00m[default: [0m[1m[36m[48;2;00;00;00mbar[0m[1m[33m[48;2;00;00;00m][0m
  [35m-h[0m, [35m--help[0m       Print help
EOF_e3588c1d
exit 0
