crates/claptrap-core/tests/snapshots/tests__command__subcommand.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap__subcommand='subcommand::nested'
claptrap_subcommand_nested_arg3='value'
