crates/claptrap-core/tests/snapshots/tests__command__subcommand_negates_reqs.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap__subcommand='test'
claptrap_test_arg='value'
