crates/claptrap-core/tests/snapshots/tests__command__subcommand_precedence_over_arg.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap__subcommand='sub'
claptrap_arg=('1' '2' '3')
